# dos-like

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build_all.bat  build_all_linux.sh  build_all_macos.sh  build_all_wasm.bat  install_sdl2glew_macos.sh  wasm_viewer.html
.github/workflows/: main.yml
files/: canyon.mid  cfodder.mod  doom.mus  simon.mid
files/sound/: doom.op2  doom.opb
source/: burn.c  burningShip.c  command.c  dos.c  dos.h  edit.c  gifmem.c  julia.c  mandelbrot.c  minivectorballs.c  modfile.h  plasma.c  raycast.c  rotozoom.c  sound.c  stranded.c  tracker.c  tunnel.c  voxel.c
source/libs/: app.h  awe32rom.h  crtemu_pc.h  crtframe.h  dr_wav.h  frametimer.h  gif_load.h  jar_mod.h  mus.h  opblib.h  opl.h  pixelfont.h  stb_textedit.h  thread.h  tsf.h
stranded/: stranded.mid  volter.fnt
tcc/doc/: tcc-doc.html
tcc/libtcc/: libtcc.def
wasm/: .gitignore  build_all.bat  template.html
